# this-cmd-be-boring-af

./: .gitignore  .pylintrc  README.md  img_to_text_converter.py  main.py  progress_bar.py  pyproject.toml  requirements.txt  youtube_downloader.py
.github/workflows/: ci.yml  publish.yml  pylint.yml
app/src/: __init__.py  main.py  path_getter.py  text_video_player.py
app/test/: test_file_sort.py  test_main.py
src/: args.py  img_to_text_converter.py  main.py  path_getter.py  text_video_player.py  youtube_downloader.py
src/python/main/: main.py
src/python/tests/: test_main.py
subway_surfers_videos/processed/video1/: frame1.txt  frame10.txt  frame100.txt  frame11.txt  frame12.txt  frame13.txt  frame14.txt  frame15.txt  frame16.txt  frame17.txt  frame18.txt  frame19.txt  frame2.txt  frame20.txt  frame21.txt  frame22.txt  frame23.txt  frame24.txt  frame25.txt  frame26.txt  frame27.txt  frame28.txt  frame29.txt  frame3.txt  frame30.txt  frame31.txt  frame32.txt  frame33.txt  frame34.txt  frame35.txt  frame36.txt  frame37.txt  frame38.txt  frame39.txt  frame4.txt  frame40.txt  frame41.txt  frame42.txt  frame43.txt  frame44.txt  (+60 more)
tests/: test_main.py
this_cmd_be_boring_af/: args.py  img_to_text_converter.py  main.py
