[tool.poetry]
name = "this-cmd-be-boring-af"
version = "0.1.0"
description = "A little tool to show subway surfers, family guy funny moments and other entertaining clips in console"
authors = ["tomas.podivinsky"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.25.1"
opencv-python = "^4.8.0.74"
pytube = "^15.0.0"
colorama = "^0.4.6"
pylint = "^3.0.0"
pytest = "^7.4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["this_cmd_be_boring_af"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
